<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">测试软件</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_pcba_test">PcbaTestActivity</string>
    <string name="untest">未测试</string>
    <string name="testing">正在测试...</string>
    <string name="auto_test_items">自动测试选项</string>
    <string name="manual_test_items">手动测试选项</string>
    <string name="start_record">开始录音</string>
    <string name="stop_record">停止录音</string>
    <string name="test_item_name">测试项名称</string>
    <string name="test_item_result">测试项结果</string>
    <string name="item_lable_ddr">内存</string>
    <string name="item_lable_flash">闪存</string>
    <string name="item_lable_uhost">U盘测试</string>
    <string name="item_lable_card">SD卡</string>
    <string name="item_lable_wifi">WIFI</string>
    <string name="item_lable_bluetooth">蓝牙</string>
    <string name="item_lable_rtc">RTC时间测试</string>
    <string name="item_lable_sim">SIM卡</string>
    <string name="item_lable_phone">拨打电话</string>
    <string name="item_lable_gsensor">重力</string>
    <string name="item_lable_usb">USB连接</string>
    <string name="item_lable_hdmi">HDMI连接</string>
    <string name="item_lable_headset">耳机</string>
    <string name="item_lable_voice">录放音测试</string>
    <string name="item_lable_key">音量键</string>
    <string name="item_lable_camera">摄像头</string>
    <string name="item_lable_lcd">LCD测试</string>
    <string name="item_lable_tp">触屏测试</string>
    <string name="item_lable_backlight">背光测试</string>
    <string name="item_lable_battery">电池测试</string>
    <string name="item_lable_mouse">鼠标连接</string>
    <string name="item_lable_infrared">红外测试</string>
    <string name="item_lable_ethernet">以太网测试</string>
    <string name="item_lable_usb2">USB2.0测试</string>
    <string name="uninstall_apk">卸载本程序</string>
    <string name="uninstall_confirm">请确认是否卸载 ！</string>
    <string name="restore">恢复出厂设置</string>
    <string name="reboot">卸载后是否关闭机器</string>
    <string name="is_connected">已插入</string>
    <string name="is_mtp_connected">已插入</string>
    <string name="is_unconnected">已拔出</string>
    <string name="is_waiting_plugin">等待插入...</string>
    <string name="is_waiting_control">等待控制...</string>
    <string name="wifi_is_openning">正在打开...</string>
    <string name="wifi_is_searching">正在扫描...</string>
    <string name="wifi_level">强 度 值:</string>
    <string name="bluetooth_not_support">设备不支持蓝牙...</string>
    <string name="bluetooth_is_openning">正在打开...</string>
    <string name="bluetooth_is_searching">正在扫描...</string>
    <string name="key_notify">请按Vol+ Vol-</string>
    <string name="voice_notify">请点击“开始录音”</string>
    <string name="voice_is_recording">正在录音</string>
    <string name="voice_is_replaying">正在放音</string>
    <string name="touch_notify">请点击“开始录音”</string>
    <string name="playing_music">正在播放音乐</string>
    <string name="waiting_music">即将播放音乐</string>
    <string name="switch_camera">切换前后摄像头</string>
    <string name="vibration_confirm">请确认一下开始振动</string>
    <string name="calibration_button">校准</string>
    
    <string name="sdcard_size_delay_show_hint">已检测到T卡，请等待计算容量！</string>
    <string name="satellite_num">卫星数:</string>
    <string name="gps_signal">信号:</string>
    <string name="gps_connecting">正在连接...</string>
    <string name="item_lable_gps">GPS</string>
    
    <string name="misc_test_items">其它测试选项</string>
    <string name="item_lable_call">电话</string>
    
    <string name="FMRadio_notice">选择</string>
    <string name="HeadSet_hook_message">请确认拨打电话时长按耳机Hook键是否可以挂断?</string>
    <string name="Success">成功</string>
    <string name="Failed">失败</string>
    <string name="headsethook_name">耳机Hook</string>
    <string name="telephone_name">电 话</string>
    
    <string name="fmradio_name">收音机</string>
    
    <string name="item_lable_call_un">拨联通</string>
    <string name="item_lable_call_cm">拨移动</string>
    
    <string name="dialing">拨号中...</string>
    <string name="dial_hint">点左边按钮测试</string>
    <string name="incall">通话中...</string>
        
</resources>
